--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,4 @@
-<div>
-  <p *ngFor="let post of posts;" style="color:black; padding: 20px">
-    {{ post.title }}
-  </p>
+<div *ngFor="let post of posts;" style="color:black; padding: 20px">
+  <h1>{{ post.title }} <span class="badge badge-secondary">New</span></h1>
+  <p>{{ post.body }}</p>
 </div>
