Added login component

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,18 @@
-<h1 style="margin-top: 200px">App main</h1>
+<div class="container">
+      <!-- Blog Entries Column -->
+    <div class="row col-md-12">
+        <h1 class="my-4">Welcome to my blog</h1>
+        <h4 class="my-4">Please login to add some posts</h4>
+    </div>
+    <div style="padding-bottom:20px;" class="row col-md-12">
+        <a href="/login" class="btn btn-primary">Login</a>
+    </div>
+    <div style="padding-bottom:20px;" class="row col-md-12">
+        <h4>If you don't have and account yet please register</h4>
+    </div>
+    <div style="padding-bottom:20px;" class="row col-md-12">
+        <a href="/register" class="btn btn-primary">Register</a>
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
