--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,7 +12,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/blog-component" href="#">Blog</a>
+          <a class="nav-link" routerLink="/blog" href="#">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
@@ -21,3 +21,4 @@
     </div>
   </div>
 </nav>
+<div style="margin-bottom: 60px"></div>
