--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,9 +1,8 @@
 <div class="container" style="margin-top:100px; margin-bottom: 30px;">
-  <!-- Blog Entries Column -->
   <div class="row col-md-12">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-        <input ng-model="login" class="form-control" value="" placeholder="Email Address">                                        
+        <input name="login" [(ngModel)]="login" class="form-control" placeholder="Email Address">                                        
     </div>
 
     <div class="input-group">
