User section after login. Publishing Posts.

--- a/src/app/main/blog/blog.component.html
+++ b/src/app/main/blog/blog.component.html
@@ -2,9 +2,7 @@
   <div class="row">
     <!-- Blog Entries Column -->
     <div class="col-md-12">
-      <h1 class="my-4">Blog
-        <small>Blog blog</small>
-      </h1>
+      <h1 class="my-4">Blog</h1>
       <!-- Blog Post -->
       <div class="card mb-4" *ngFor="let post of posts;">
         <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
