--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -5,7 +5,7 @@
   <div class="row col-md-12">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-        <input name="login" [(ngModel)]="login" class="form-control" placeholder="Email Address">                                        
+        <input name="login" [(ngModel)]="login" class="form-control" placeholder="Login">                                        
     </div>
 
     <div class="input-group">
