--- a/src/app/main/blog/blog.component.html
+++ b/src/app/main/blog/blog.component.html
@@ -8,7 +8,7 @@
       </div>
       <!-- Blog Post -->
       <div class="card mb-4" *ngFor="let post of filterFunction(post);">
-        <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+        <img class="card-img-top" src="{{post.image}}" alt="Card image cap">
         <div class="card-body">
           <h2 class="card-title">{{ post.title }}</h2>
           <p class="card-text">{{ post.body }}</p>
