--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -10,7 +10,7 @@
 
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-        <input name="password" [(ngModel)]="password" class="form-control" placeholder="Password">                                        
+        <input type="password" name="password" [(ngModel)]="password" class="form-control" placeholder="Password">                                        
     </div>
 
     <button (click)="loginUser()" class="btn btn-primary">Login</button>
