--- a/src/app/main/post/post.component.html
+++ b/src/app/main/post/post.component.html
@@ -1,19 +1,19 @@
 <div class="container" style="margin-top:100px; margin-bottom: 30px;">
   <div class="row col-md-12">
     <div class="input-group"> 
-        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-        <input name="title" [(ngModel)]="title" class="form-control" placeholder="Title" />                                        
-    </div>
-
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-        <input name="body" [(ngModel)]="body" class="form-control" placeholder="Body" />                                        
+      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+      <input name="title" [(ngModel)]="title" class="form-control" placeholder="Title" />                                        
     </div>
 
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-      <input type="file" name="image" (change)="onImageUpload($event)" class="form-control" />                                        
-  </div>
+      <input name="body" [(ngModel)]="body" class="form-control" placeholder="Body" />                                        
+    </div>
+
+    <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+      <input name="image" [(ngModel)]="image" class="form-control" placeholder="Image url" />                                        
+    </div>
 
     <button (click)="pushPost()" class="btn btn-primary">Publish</button>
   </div>
