--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="margin-top:100px; margin-bottom: 30px;">
-  <div *ngFor="let error of loginModel.loginErrors" class="alert alert-danger" role="alert">
+  <div *ngFor="let error of loginViewModel.loginErrors" class="alert alert-danger" role="alert">
     {{ error }}
   </div>
   <div class="row col-md-12">
