--- a/src/app/main/post/post.component.html
+++ b/src/app/main/post/post.component.html
@@ -1,4 +1,7 @@
 <div class="container" style="margin-top:100px; margin-bottom: 30px;">
+  <div style="padding-bottom:20px;" class="row col-md-12">
+      <h4>Adding Posts</h4>
+  </div>
   <div class="row col-md-12">
     <div class="input-group"> 
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
